History
-------

xx/xx/xxxx  *** v2.33 ***

            - Added SHA1 / MD5 information for Neil Corlett's KGPE hack.
            - Added support for AAE RomList.
            - datutil -k now allows MD5 and SHA1 at the same time.
            - datutil -n will NOT determine file types (everything = roms).
            - Changed the directory scanner to process zero byte files / roms.

16/07/2008  *** v2.32 ***

            - Improved datutil -i to search for ROMs by CRC as well as name.

29/06/2008  *** v2.31 ***

            - Added support for &apos; in the XML formats.

24/06/2008  *** v2.30 ***

            - Added XML entity support to generic XML headers (when saving).

10/06/2008  *** v2.29 ***

            - Added warning when forcenodump is missing.

05/05/2008  *** v2.28 ***

            - Fixed parsing of listinfo comments.
            - MAMEDiff -z option is inferred from 'forcenodump' (if present).
            - Fixed de-duplication of "nodump" ROMs and disks for MAMEDiff.

16/04/2008  *** v2.27 ***

            - Fixed generation of url within CMPro datafiles (needs quotes).
            - Added support for release information (mainly for console ROMs).
            - Added release support to list+generic xml, listinfo, delimited.
            - Added the <release> element to the ROM Management Datafile DTD.
            - Added support for Game Launcher and GameEx Map Files (untested).
            - Added support for substring selections (within descriptions).

06/04/2008  *** v2.26 ***

            - Minor tweaks to the DTD (header and manufacturer now optional).
            - Fixed empty header being written to Generic XML datafiles.
            - Fixed conversion of MESS XML to Generic XML (machines -> games).

04/04/2008  *** v2.25 ***

            - Added automatic date population (based on the version number).
            - Renamed forcezipping to forcepacking (CMPro).
            - Renamed forcedrommode to rommode (RomCenter 3).